// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User API Can change password and retain the session 1: [body] 1`] = `
Object {
  "password": Array [
    Object {
      "message": "Password changed successfully.",
    },
  ],
}
`;

exports[`User API Can change password and retain the session 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "59",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can edit user roles by name 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Changed Name",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Array [
        Any<Object>,
      ],
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can edit user roles by name 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1052",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can edit user with empty roles data and does not change the role 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "roles": Array [
        Any<Object>,
      ],
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": "http://joe-bloggs.ghost.org",
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can edit user with empty roles data and does not change the role 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1115",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can include user roles 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "inactive@test.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "name",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "inactive",
      "status": "inactive",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "supersuper@ghost.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Super Editor",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "super-editor",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "contributor@ghost.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Contributor",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "contributor",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "smcectoplasm@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Slimer McEctoplasm",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "slimer-mcectoplasm",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbOgendAth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Jimothy Bogendath",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "jimothy-bogendath",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Smith Wellingsworth",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "You can delete this user to remove all the welcome posts",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "ghost-author@example.com",
      "facebook": "ghost",
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "The Internet",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Ghost",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": "https://static.ghost.org/v4.0.0/images/ghost-user.png",
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "ghost",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": "ghost",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/ghost/",
      "website": "https://ghost.org",
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can include user roles 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "8483",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can paginate users 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 5,
      "next": null,
      "page": 2,
      "pages": 2,
      "prev": 1,
      "total": 8,
    },
  },
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Smith Wellingsworth",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "You can delete this user to remove all the welcome posts",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "ghost-author@example.com",
      "facebook": "ghost",
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "The Internet",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Ghost",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": "https://static.ghost.org/v4.0.0/images/ghost-user.png",
      "recommendation_notifications": true,
      "slug": "ghost",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": "ghost",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/ghost/",
      "website": "https://ghost.org",
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can paginate users 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "2856",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can re-generate the user's Personal Token 1: [body] 1`] = `
Object {
  "apiKey": Object {
    "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
    "integration_id": null,
    "last_seen_at": null,
    "last_seen_version": null,
    "role_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
    "secret": Any<String>,
    "type": "admin",
    "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    "user_id": Any<String>,
  },
}
`;

exports[`User API Can re-generate the user's Personal Token 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "356",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can read the user's Personal Token 1: [body] 1`] = `
Object {
  "apiKey": Object {
    "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
    "integration_id": null,
    "last_seen_at": null,
    "last_seen_version": null,
    "role_id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
    "secret": Any<String>,
    "type": "admin",
    "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
    "user_id": Any<String>,
  },
}
`;

exports[`User API Can read the user's Personal Token 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "356",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can request all users ordered by id 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 8,
    },
  },
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "inactive@test.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "name",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "inactive",
      "status": "inactive",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "supersuper@ghost.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Super Editor",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "super-editor",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "contributor@ghost.org",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Contributor",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "contributor",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "smcectoplasm@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Slimer McEctoplasm",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "slimer-mcectoplasm",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbOgendAth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Jimothy Bogendath",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "jimothy-bogendath",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Smith Wellingsworth",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "You can delete this user to remove all the welcome posts",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "ghost-author@example.com",
      "facebook": "ghost",
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "The Internet",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Ghost",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": "https://static.ghost.org/v4.0.0/images/ghost-user.png",
      "recommendation_notifications": true,
      "slug": "ghost",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": "ghost",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/ghost/",
      "website": "https://ghost.org",
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can request all users ordered by id 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "7124",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can retrieve a user by email 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Smith Wellingsworth",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can retrieve a user by email 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "881",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can retrieve a user by id 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "count": Object {
        "posts": 8,
      },
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can retrieve a user by id 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1127",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can retrieve a user by slug 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Smith Wellingsworth",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can retrieve a user by slug 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "881",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Can transfer ownership to admin user 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": false,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": "5951f5fc0000000000000000",
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "locale": null,
      "location": "location",
      "mastodon": "https://mastodon.social/@johnsmith",
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "roles": Array [
        Object {
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "description": "Administrators",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Administrator",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        },
      ],
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "visibility": "public",
      "website": "http://joe-bloggs.ghost.org",
      "youtube": null,
    },
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": "6193c65ee792de832cd08130",
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "locale": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Changed Name",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Array [
        Object {
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "description": "Blog Owner",
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "name": "Owner",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
        },
      ],
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "visibility": "public",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API Can't read another user's Personal Token 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": Any<String>,
      "message": "You do not have permission to perform this action",
      "property": null,
      "type": "NoPermissionError",
    },
  ],
}
`;

exports[`User API Can't read another user's Personal Token 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "239",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Does not trigger cache invalidation when a private attribute on a user has been changed 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": false,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": "http://joe-bloggs.ghost.org",
      "youtube": null,
    },
  ],
}
`;

exports[`User API Does not trigger cache invalidation when a private attribute on a user has been changed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "950",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Does not trigger cache invalidation when no attribute on a user has been changed 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": false,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": "https://mastodon.social/@johnsmith",
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": "http://joe-bloggs.ghost.org",
      "youtube": null,
    },
  ],
}
`;

exports[`User API Does not trigger cache invalidation when no attribute on a user has been changed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "982",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API Does trigger cache invalidation when a social link on a user has been changed 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": false,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": "https://mastodon.social/@johnsmith",
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": "http://joe-bloggs.ghost.org",
      "youtube": null,
    },
  ],
}
`;

exports[`User API Does trigger cache invalidation when a social link on a user has been changed 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "982",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`User API can edit a user 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "jbloggs@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Joe Bloggs",
      "paid_subscription_canceled_notification": true,
      "paid_subscription_started_notification": true,
      "profile_image": "https://example.com/super_photo.jpg",
      "recommendation_notifications": true,
      "slug": "joe-bloggs",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
      "website": "http://joe-bloggs.ghost.org",
      "youtube": null,
    },
  ],
}
`;

exports[`User API can edit a user 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "949",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`User API can edit a user fetched from the API 1: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Smith Wellingsworth",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API can edit a user fetched from the API 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1059",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`User API can edit a user fetched from the API 3: [body] 1`] = `
Object {
  "users": Array [
    Object {
      "accessibility": null,
      "bio": "bio",
      "bluesky": null,
      "comment_notifications": true,
      "cover_image": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "donation_notifications": true,
      "email": "swellingsworth@example.com",
      "facebook": null,
      "free_member_signup_notification": true,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "instagram": null,
      "last_seen": Nullable<StringMatching>,
      "linkedin": null,
      "location": "location",
      "mastodon": null,
      "mention_notifications": true,
      "meta_description": null,
      "meta_title": null,
      "milestone_notifications": true,
      "name": "Changed Name",
      "paid_subscription_canceled_notification": false,
      "paid_subscription_started_notification": true,
      "profile_image": null,
      "recommendation_notifications": true,
      "roles": Any<Array>,
      "slug": "smith-wellingsworth",
      "status": "active",
      "threads": null,
      "tiktok": null,
      "tour": null,
      "twitter": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "website": null,
      "youtube": null,
    },
  ],
}
`;

exports[`User API can edit a user fetched from the API 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "1052",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;
